--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -7,6 +7,8 @@ provisioner:
 
 platforms:
   - name: ubuntu-14.04
+    driver:
+      require_chef_omnibus: 12.13.37
     run_list:
     attributes: {
     }
@@ -14,6 +16,12 @@ suites:
   - name: simple_locking_resource
     run_list:
       - 'recipe[locking_resource_test::simple_serialized_lock]'
-  - name: simple_colliding_lock_resource
+  - name: held_serialized_lock
     run_list:
       - 'recipe[locking_resource_test::held_serialized_lock]'
+  - name: exception_serialized_lock
+    run_list:
+      - 'recipe[locking_resource_test::exception_serialized_lock]'
+  - name: serialized_process
+    run_list:
+      - 'recipe[locking_resource_test::serialized_process_lock_handling]'
