--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -7,10 +7,13 @@ provisioner:
 
 platforms:
   - name: ubuntu-14.04
-    driver:
-      require_chef_omnibus: 12.13.37
     run_list:
     attributes: {
+      locking_resource: {
+        restart_lock_acquire: {
+          timeout: 3
+        }
+      }
     }
 suites:
   - name: simple_locking_resource
@@ -25,3 +28,9 @@ suites:
   - name: serialized_process
     run_list:
       - 'recipe[locking_resource_test::serialized_process_lock_handling]'
+  - name: re_run_lock_older
+    run_list:
+      - 'recipe[locking_resource_test::re_run_lock_older]'
+  - name: re_run_lock_newer
+    run_list:
+      - 'recipe[locking_resource_test::re_run_lock_newer]'
